[FIX] web: fix phone field button text alignment
Fix the phone field buttons text alignment
("Call", "SMS", ...) which is currently rendering
the letters on different lines because of a text-break
css class introduced by: odoo/odoo#114442

Override this text-break class for the phone field
buttons links.

Task-3258943

--- a/addons/web/static/src/views/fields/phone/phone_field.scss
+++ b/addons/web/static/src/views/fields/phone/phone_field.scss
@@ -5,3 +5,8 @@ body:not(.o_touch_device) .o_field_phone {
         }
     }
 }
+
+.o_phone_content small {
+    overflow-wrap: normal;
+    word-break: normal;
+}
